--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,102 @@
   text-align: center;
 }
 
-.modal-background{
-	background-color: #eee;
+.modal-background {
+  background-color: #eee;
+}
+
+/* profil */
+.collapse img {
+  width: 35px;
+  height: auto;
+  margin-right: 5px;
+}
+
+.navbar-brand {
+  font-family: 'ZCOOL QingKe HuangYou', cursive;
+  font-size: 35px;
+}
+
+.jb1 {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5),
+    rgba(0, 0, 0, 0.05)), url("../images/bg2.jpg");
+  background-size: 100%;
+  background-position: center;
+  background-position-y: 30%;
+  background-repeat: no-repeat;
+  height: 400px;
+}
+
+.jb1 img {
+  width: 200px;
+  height: auto;
+
+}
+
+/* info panel */
+.info-panel {
+  margin-top: -80px;
+}
+
+/* konten */
+.konten {
+  height: 200px;
+}
+
+.gallery-block {
+  padding-bottom: 60px;
+  padding-top: 60px;
+}
+
+.gallery-block .heading {
+  margin-bottom: 50px;
+  text-align: center;
+}
+
+.gallery-block .heading h2 {
+  font-weight: bold;
+  font-size: 1.4rem;
+  text-transform: uppercase;
+}
+
+.gallery-block.cards-gallery h6 {
+  font-size: 17px;
+  font-weight: bold;
+}
+
+.gallery-block.cards-gallery .card {
+  transition: 0.4s ease;
+}
+
+.gallery-block.cards-gallery .card img {
+  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.15);
+}
+
+.gallery-block.cards-gallery .card-body {
+  text-align: center;
+}
+
+.gallery-block.cards-gallery .card-body p {
+  font-size: 15px;
+}
+
+.gallery-block.cards-gallery a {
+  color: #212529;
+}
+
+.gallery-block.cards-gallery a:hover {
+  text-decoration: none;
+}
+
+.gallery-block.cards-gallery .card {
+  margin-bottom: 30px;
+  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.15);
+}
+
+@media (min-width: 576px) {
+
+  .gallery-block .transform-on-hover:hover {
+    transform: translateY(-10px) scale(1.02);
+    box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.15) !important;
+  }
 }
