--- a/css/style.css
+++ b/css/style.css
@@ -5,10 +5,11 @@
 .modal-background {
   background-color: #eee;
 }
+
 .center {
- margin-inline-start: auto;
+  margin-inline-start: auto;
   margin-inline-end: auto;
-=======
+}
 
 /* profil */
 .collapse img {
@@ -104,5 +105,4 @@
     transform: translateY(-10px) scale(1.02);
     box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.15) !important;
   }
->>>>>>> 50b028be434d249216b527a3c1d694f9849bfe26
 }
