--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,7 @@ body{
   color: #fff;
   background-color: #007bff;
   border-color: #ddd;
-=======
+}
 .copyright {
   text-align: center;
 }
@@ -160,9 +160,4 @@ body{
     transform: translateY(-10px) scale(1.02);
     box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.15) !important;
   }
-<<<<<<< HEAD
-=======
->>>>>>> 50b028be434d249216b527a3c1d694f9849bfe26
->>>>>>> 8f8b3ad022e5bee5e01cc59577ec06817f63ebe6
->>>>>>> 4bdd7bcb3b9729909c246788d11902e80cc82904
 }
