--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,11 @@ body{
 	color:#fff;
 	border: none;
 }
+.material-icons-u{
+	font-size:36px;
+	color:#444;
+	border: none;
+}
 
 .startnav{
 	background-color: #333;
