--- a/css/style.css
+++ b/css/style.css
@@ -151,7 +151,9 @@ body{
   margin-bottom: 30px;
   box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.15);
 }
-
+video.col-lg-12.pt-2 {
+  height: 400px;
+}
 @media (min-width: 576px) {
 
   .gallery-block .transform-on-hover:hover {
