--- a/css/style.css
+++ b/css/style.css
@@ -1,49 +1,52 @@
-body{
-	background-color: #eee;
+body {
+  background-color: #eee;
 }
 
-.material-icons{
-    position:absolute;
-    top:30%;
-    left:45%;
+.material-icons {
+  position: absolute;
+  top: 30%;
+  left: 45%;
 }
 
-.material-icons-i{
-	font-size:36px;
-	color:#fff;
-	border: none;
-}
-.material-icons-u{
-	font-size:36px;
-	color:#444;
-	border: none;
+.material-icons-i {
+  font-size: 36px;
+  color: #fff;
+  border: none;
 }
 
-.startnav{
-	background-color: #333;
-	height: 100px;
+.material-icons-u {
+  font-size: 36px;
+  color: #444;
+  border: none;
 }
 
-.navbtn{
-	height: 100px;
+.startnav {
+  background-color: #333;
+  height: 100px;
 }
 
-.navbtn:active{
-	background-color: #222;
-}
-.navbtn:hover,.navbtn:focus{
-	background-color: #222;
+.navbtn {
+  height: 100px;
 }
 
-.navbtnlink{
-	height:100px;
-	width:100%;
-	padding:auto;
+.navbtn:active {
+  background-color: #222;
 }
 
-.imgthumb{
-	margin-top: -50px;
-	border: 4px solid #fff;
+.navbtn:hover,
+.navbtn:focus {
+  background-color: #222;
+}
+
+.navbtnlink {
+  height: 100px;
+  width: 100%;
+  padding: auto;
+}
+
+.imgthumb {
+  margin-top: -50px;
+  border: 4px solid #fff;
 }
 
 .btn-outline-custom {
@@ -58,6 +61,7 @@ body{
   background-color: #007bff;
   border-color: #ddd;
 }
+
 .copyright {
   text-align: center;
 }
@@ -90,24 +94,25 @@ body{
   background-position: center;
   background-position-y: 30%;
   background-repeat: no-repeat;
-  width: 100%;
   height: 400px;
+  margin-top: -10px;
+  position: relative;
+  z-index: -1;
 }
 
 .jb1 img {
-  width: 50%;
+  width: 200px;
   height: auto;
 
 }
 
 /* info panel */
 .info-panel {
-  margin-top: -100px;
+  margin-top: -110px;
+  margin-bottom: 20px;
 }
 
 /* konten */
-
-
 .gallery-block {
   padding-bottom: 60px;
   padding-top: 30px;
@@ -157,14 +162,16 @@ body{
   margin-bottom: 30px;
   box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.15);
 }
+
 video.col-lg-12.pt-2 {
   height: 400px;
 }
+
 @media (min-width: 576px) {
 
   .gallery-block .transform-on-hover:hover {
     transform: translateY(-10px) scale(1.02);
     box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.15) !important;
   }
-  
+
 }
